# ce-mongo-x-ray

./: .gitignore  .gitmodules  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-base.txt  x-ray  x_ray.py
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  makefile.yml  publish-pypi.yml  publish-testpypi.yml  pylint.yml  release.yml
hooks/: hook-x_ray.py
libs/: utils.py  version.py
libs/healthcheck/: issues.py
libs/healthcheck/check_items/: base_item.py  build_info_item.py  cluster_item.py  coll_info_item.py  host_info_item.py  index_info_item.py  security_item.py  server_status_item.py  shard_key_item.py
libs/healthcheck/rules/: base_rule.py  cache_rule.py  connections_rule.py  data_size_rule.py  fragmentation_rule.py  host_info_rule.py  index_rule.py  numa_rule.py  op_latency_rule.py  oplog_window_rule.py  query_targeting_rule.py  rs_config_rule.py  rs_status_rule.py  security_rule.py  shard_balance_rule.py  shard_key_rule.py  shard_mongos_rule.py  test_query_targeting.py  version_eol_rule.py
libs/log_analysis/: framework.py
libs/log_analysis/log_items/: client_meta_item.py
misc/: add_copyright.sh  config_test.json  getMongoData-output.json  getMongoData-rs.json  getMongoData-sh.json  redundant_index.js
src/x_ray/: __main__.py  ai.py  config.json  table_width_extension.py  utils.py  version.py
src/x_ray/ftdc_analysis/: __init__.py  charts.py  framework.py  reader.py  shared.py
src/x_ray/ftdc_analysis/ftdc_items/: __init__.py  base_item.py  baseline_analysis_item.py  metadata_review_item.py  overview_item.py
src/x_ray/ftdc_analysis/parsers/: __init__.py  base_parser.py  baseline_analysis_parser.py  overview_parser.py
src/x_ray/gmd/: framework.py
src/x_ray/gmd_analysis/: __init__.py  framework.py  shared.py
src/x_ray/gmd_analysis/gmd_items/: __init__.py  base_item.py  build_info_item.py  coll_info_item.py  db_item.py  host_info_item.py  index_info_item.py  rs_info_item.py  security_item.py  server_status_item.py  sh_info_item.py  sharded_db_item.py  summary_item.py
src/x_ray/gmd_analysis/parsers/: base_parser.py  coll_stats_parser.py  db_parser.py  sh_details_parser.py  sharded_db_parser.py
src/x_ray/healthcheck/: framework.py  issues.py  shared.py
src/x_ray/healthcheck/check_items/: __init__.py  base_item.py  build_info_item.py  cluster_item.py  coll_info_item.py  host_info_item.py  index_info_item.py  security_item.py  server_status_item.py  shard_key_item.py
src/x_ray/healthcheck/parsers/: __init__.py  base_parser.py  build_info_parser.py  cache_parser.py  coll_overview_parser.py  coll_stats_parser.py  conn_parser.py  host_info_parser.py  index_info_parser.py  opcounter_parser.py  query_targeting_parser.py  rs_details_parser.py  rs_overview_parser.py  security_parser.py  sh_overview_parser.py  shard_key_parser.py
src/x_ray/healthcheck/rules/: base_rule.py  cache_rule.py  connections_rule.py  data_size_rule.py  fragmentation_rule.py  fs_type_rule.py  host_info_rule.py  index_rule.py  numa_rule.py  op_latency_rule.py  oplog_window_rule.py  query_targeting_rule.py  rs_config_rule.py  rs_status_rule.py  security_rule.py  shard_balance_rule.py  shard_key_rule.py  shard_mongos_rule.py  version_eol_rule.py
src/x_ray/log_analysis/: framework.py  query_analyzer.py  shared.py
src/x_ray/log_analysis/log_items/: base_item.py  client_meta_item.py  connection_rate_item.py  info_item.py  log_rate_item.py  slow_chart_item.py  slow_rate_item.py  state_trace_item.py  top_slow_item.py  wef_item.py
src/x_ray/templates/: minify.sh
src/x_ray/templates/css/: shared.css  shared.raw.css
src/x_ray/templates/ftdc/: full.html  full.raw.html  script.js  script.raw.js  style.raw.css
src/x_ray/templates/gmd/: full.html  full.raw.html  script.js  script.raw.js
src/x_ray/templates/healthcheck/: full.html  full.raw.html  script.js  script.raw.js
src/x_ray/templates/js/: common.js  common.raw.js  outline.raw.js  post_common.raw.js  sort.js  (+8 more)
tests/: __init__.py  test_pdf_output.py  test_table_width_extension.py  test_utils.py  test_version.py
tests/ftdc/: __init__.py  test_baseline_analysis_item.py  test_charts.py  test_cli.py  test_framework.py  test_metadata_review_item.py  test_overview_item.py
tests/ftdc/parsers/: test_baseline_analysis_parser.py  test_overview_parser.py
tests/gmd/: test_shared.py
tests/gmd/parsers/: test_coll_stats_parser.py  test_db_parser.py  test_sh_details_parser.py  test_sharded_db_parser.py
tests/hc/: test_cache_rule.py  test_connections_rule.py  test_data_size_rule.py  test_fragmentation_rule.py  test_host_info_rule.py  test_index_rule.py  test_numa_rule.py  test_op_latency_rule.py  test_oplog_window_rule.py  test_query_targeting.py  test_rs_config_rule.py  test_rs_status_rule.py  test_security_rule.py  test_shard_balance_rule.py  test_shard_key_rule.py  test_shard_mongos_rule.py  test_shared.py  test_version_eol_rule.py
tests/hc/parsers/: test_build_info_parser.py  test_cache_parser.py  test_coll_overview_parser.py  test_coll_stats_parser.py  test_conn_parser.py  test_host_info_parser.py  test_index_info_parser.py  test_opcounter_parser.py  test_query_targeting_parser.py  test_rs_details_parser.py  test_rs_overview_parser.py  test_security_parser.py  test_sh_overview_parser.py  test_shard_key_parser.py
tests/hc/rules/: test_cache_rule.py  test_connections_rule.py  test_data_size_rule.py  test_fragmentation_rule.py  test_fs_type_rule.py  test_host_info_rule.py  test_index_rule.py  test_numa_rule.py  test_op_latency_rule.py  test_oplog_window_rule.py  test_query_targeting.py  test_rs_config_rule.py  test_rs_status_rule.py  test_security_rule.py  test_shard_balance_rule.py  test_shard_key_rule.py  test_shard_mongos_rule.py  test_version_eol_rule.py
tests/log/: __init__.py  mocking.py  test_ClientMetadata.py  test_ConnectionRate.py  test_Info.py  test_SlowChart.py  test_SlowRate.py  test_StateTrace.py  test_TopSlow.py  test_WEF.py  test_query_analyser.py  test_shared.py
(+34 files in other folders)
