[build-system]
requires = ["setuptools==82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo-x-ray"
version = "1.3.0"
description = "MongoDB diagnostics toolkit with health checks and log analysis"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "Yaoxing Zhang" }]
keywords = ["mongodb", "diagnostics", "healthcheck", "log-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "pymongo==4.16.0",
  "Jinja2==3.1.6",
  "Markdown==3.10.2",
  "types-Markdown==3.10.2.20260211",
  "MarkupSafe==3.0.3",
  "packaging==26.0",
  "Pygments==2.19.2",
  "PyYAML==6.0.3",
  "requests==2.33.1",
  "urllib3==2.6.3",
  "openai==2.31.0",
  "httpx==0.28.1",
  "httpcore==1.0.9",
  "h11==0.16.0",
  "certifi==2026.2.25",
  "idna==3.11",
  "sniffio==1.3.1",
  "anyio==4.13.0",
  "python-dateutil==2.9.0",
  "types-python-dateutil==2.9.0.20260323",
]

[project.optional-dependencies]
dev = [
  "black==25.11.0",
  "pylint==3.3.9",
  "flake8==7.3.0",
  "pytest==8.4.2",
  "pytest-cov==7.1.0",
  "pluggy==1.6.0",
  "iniconfig==2.1.0",
  "tomli==2.4.1",
  "pyinstaller==6.19.0",
  "pyinstaller-hooks-contrib==2026.4",
  "macholib==1.16.4",
  "altgraph==0.17.5",
]
ai = [
  "torch==2.11.0",
  "torchvision==0.26.0",
  "transformers==5.5.3",
  "accelerate==1.13.0",
  "bitsandbytes==0.48.2",
  "huggingface-hub==1.7.2",
  "safetensors==0.7.0",
  "tokenizers==0.22.2",
  "filelock==3.25.2",
  "fsspec==2026.3.0",
  "hf-xet==1.4.2",
  "numpy==2.2.6",
  "scipy==1.15.3",
  "pillow==12.2.0",
  "regex==2026.3.32",
  "tqdm==4.67.3",
  "pydantic==2.12.5",
  "pydantic_core==2.42.0",
  "annotated-types==0.7.0",
  "typing_extensions==4.15.0",
  "jiter==0.13.0",
  "psutil==7.2.2",
  "networkx==3.2.1",
  "sympy==1.14.0",
  "mpmath==1.4.1",
  "distro==1.9.0",
  "dnspython==2.8.0",
  "charset-normalizer==3.4.7",
  "exceptiongroup==1.3.1",
  "importlib_metadata==8.7.1",
  "typing-inspection==0.4.2",
  "zipp==3.23.0",
]

[project.urls]
Homepage = "https://github.com/mongodb-ps/ce-mongo-x-ray"
Repository = "https://github.com/mongodb-ps/ce-mongo-x-ray"
Issues = "https://github.com/mongodb-ps/ce-mongo-x-ray/issues"

[tool.setuptools]
include-package-data = true

[project.scripts]
x-ray = "x_ray.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["x_ray*"]
exclude = ["tests*", "output*", "misc*", "build*", "dist*"]

[tool.setuptools.package-data]
"x_ray" = [
  "config.json",
  "compatibility_matrix.json",
  "templates/**/*.html",
  "templates/**/*.js",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
