[build-system]
requires = ["setuptools==83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo-x-ray"
version = "1.4.1"
description = "MongoDB diagnostics toolkit with health checks and log analysis"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "Yaoxing Zhang" }]
keywords = ["mongodb", "diagnostics", "healthcheck", "log-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "pymongo==4.17.0",
  "Jinja2==3.1.6",
  "Markdown==3.10.2",
  "types-Markdown==3.10.2.20260712",
  "MarkupSafe==3.0.3",
  "packaging==26.2",
  "Pygments==2.20.0",
  "PyYAML==6.0.3",
  "requests==2.34.2",
  "urllib3==2.7.0",
  "openai==2.46.0",
  "httpx==0.28.1",
  "httpcore==1.0.9",
  "h11==0.16.0",
  "certifi==2026.6.17",
  "idna==3.18",
  "sniffio==1.3.1",
  "anyio==4.14.2",
  "python-dateutil==2.9.0.post0",
  "types-python-dateutil==2.9.0.20260518",
  "pymongoftdc>=0.1.1",
  "Pillow>=10.0.0",
  "WeasyPrint==69.0",
]

[project.optional-dependencies]
dev = [
  "black==26.5.1",
  "pylint==4.0.6",
  "pyright==1.1.411",
  "flake8==7.3.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pluggy==1.6.0",
  "iniconfig==2.3.0",
  "tomli==2.4.1",
  "pyinstaller==6.21.0",
  "pyinstaller-hooks-contrib>=2026.6",
  "macholib==1.16.4",
  "altgraph==0.17.5",
]
[project.urls]
Homepage = "https://github.com/mongodb-ps/ce-mongo-x-ray"
Repository = "https://github.com/mongodb-ps/ce-mongo-x-ray"
Issues = "https://github.com/mongodb-ps/ce-mongo-x-ray/issues"

[tool.setuptools]
include-package-data = true

[project.scripts]
x-ray = "x_ray.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["x_ray*"]
exclude = ["tests*", "output*", "misc*", "build*", "dist*"]

[tool.setuptools.package-data]
"x_ray" = [
  "config.json",
  "compatibility_matrix.json",
  "templates/**/*.html",
  "templates/**/*.js",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"

[tool.isort]
profile = "black"
line_length = 120
